# llm-zoomcamp-2026

./: .env.example  .gitignore  README.md  pyproject.toml
01-agentic-rag/: homework.ipynb  homework.md  homework.py  rag_helper.py
02-vector-search/: homework.ipynb  homework.md  homework.py
06-best-practices/: homework.md
