[project]
name = "llm-zoomcamp-2026"
version = "0.1.0"
description = "Homework solutions and capstone for LLM Zoomcamp 2026 (DataTalksClub)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "gitsource",
    "marimo",
    "minsearch",
    "nbformat>=5.10.4",
    "python-dotenv>=1.1",
    "toyaikit",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["01-agentic-rag/homework.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
